--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
+    "@angular/flex-layout": "^6.0.0-beta.15",
     "@angular/forms": "~7.1.0",
     "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.1.0",
@@ -31,6 +32,7 @@
     "datatables.net-buttons-bs4": "^1.5.4",
     "datatables.net-responsive": "^2.2.3",
     "datatables.net-responsive-bs4": "^2.2.3",
+    "file-system": "^2.2.2",
     "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.32.4",
