--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "datatables.net-responsive-bs4": "^2.2.3",
     "file-system": "^2.2.2",
     "jquery": "^3.3.1",
+    "ng2-dnd": "^5.0.2",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.32.4",
     "tslib": "^1.9.0",
