--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.1.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "angular-datatables": "^7.0.0",
+    "angular-schema-form-dynamic-select": "^0.13.1",
     "angular7-json-schema-form": "^1.0.4",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
