--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.32.4",
     "tslib": "^1.9.0",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
