--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
-    "@angular/cdk": "^7.2.0",
+    "@angular/animations": "^7.2.1",
+    "@angular/cdk": "^7.2.1",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/flex-layout": "^6.0.0-beta.15",
     "@angular/forms": "~7.1.0",
-    "@angular/material": "^7.2.0",
+    "@angular/material": "^7.2.1",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
@@ -36,6 +36,7 @@
     "file-system": "^2.2.2",
     "jquery": "^3.3.1",
     "ng2-dnd": "^5.0.2",
+    "ngx-accordion": "0.0.17",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.32.4",
     "tslib": "^1.9.0",
