--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
+    "angular-bootstrap-md": "^7.3.0",
     "angular-datatables": "^7.0.0",
     "angular-schema-form-dynamic-select": "^0.13.1",
     "angular7-json-schema-form": "^1.0.4",
